test/error/Var.pas

var
    UndefinedType: UndefType;
    { comma }
    a, b: Integer, 
    c; d: Integer;
    e, f;

begin

end;
